--- a/QRefreshLayout/src/main/res/values/strings.xml
+++ b/QRefreshLayout/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">QRefreshLayout</string>
-    <string name="loading_tips">内容加载中...</string>
-    <string name="normal_tips">下拉刷新...</string>
-    <string name="pulling_tips">松开刷新...</string>
+    <string name="loading_tips">内容加载中</string>
+    <string name="normal_tips">下拉刷新</string>
+    <string name="pulling_tips">松开刷新</string>
     <string name="complete_tips">加载完成</string>
-    <string name="normal_tips_2">上拉加载更多...</string>
-    <string name="pulling_tips_2">松开加载更多...</string>
+    <string name="normal_tips_2">上拉加载更多</string>
+    <string name="pulling_tips_2">松开加载更多</string>
 </resources>
